# demo_rust_grpc_service

./: Cargo.toml  Dockerfile  README.md  build.rs
proto/: accounts.proto
src/: client.rs  server.rs
