[package]
name = "rust_grpc_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "s" # Optimize for binary size
lto = true # Enable link time optimization
codegen-units = 1 # Maximize size reduction optimizations

[[bin]]
name = "accounts-microservice"
path = "src/server.rs"

[[bin]]
name = "accounts-client"
path = "src/client.rs"


[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"]}

[build-dependencies]
tonic-build = "0.7"